--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -12,7 +12,7 @@
 
 "Sanders":
   - firstname: ["Julia", "Julia Anna", "J.", "J.A."]
-    url: https://researchportal.helsinki.fi/en/persons/julia-anna-sanders
+    url: https://julia-sand.github.io/
 
 "Vulpiani":
   - firstname: ["Angelo", "A."]
