--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,11 @@
+"Lucente":
+  - firstname: ["Dario", "D."]
+    url: https://scholar.google.com/citations?user=1UJS30IAAAAJ&hl=it
+
+"Cattaneo":
+  - firstname: ["Marco", "M."]
+    url: https://scholar.google.it/citations?user=nmRqHKMAAAAJ&hl=it
+
 "Chruściński":
   - firstname: ["Dariusz", "D."]
     url: http://fizyka.umk.pl/~darch/
