--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,7 @@
+"Vaaranta":
+  - firstname: ["Antti", "A."]
+    url: https://inspirehep.net/authors/2097915
+
 "Lucente":
   - firstname: ["Dario", "D."]
     url: https://scholar.google.com/citations?user=1UJS30IAAAAJ&hl=it
