--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,7 @@
+"vom Ende":
+  - firstname: ["Frederik", "F."]
+    url: https://scholar.google.com/citations?user=RhPkf50AAAAJ&hl=de
+
 "Vaaranta":
   - firstname: ["Antti", "A."]
     url: https://inspirehep.net/authors/2097915
