--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ scopus_id: 6602783690 # your profile on Scopus
 adsauthor_id: muratore-ginanneschi,p
 wos_id: E-6529-2012 # your WoS ID
 arxiv_id: muratoreginanneschi_p_1 # your ArXiv ID
-semanticscholar_id: 1403053032 # your Semantic Scholar ID
+#semanticscholar_id: 1403053032 # your Semantic Scholar ID
 work_url: https://researchportal.helsinki.fi/en/persons/paolo-muratore-ginanneschi # work page URL
 #orcidads_id: 0000-0003-0241-6619 # your ADS ID (same as ORCID)
 # publons_id: 1534563 # your ID on Publons
