--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,7 @@
+"Resch":
+  - firstname: ["Miriam", "M."]
+    url: https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=resch%2C+miriam&terms-0-field=author&classification-physics_archives=all&classification-include_cross_list=include&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&date-date_type=submitted_date&abstracts=show&size=50&order=-announced_date_first
+
 "vom Ende":
   - firstname: ["Frederik", "F."]
     url: https://scholar.google.com/citations?user=RhPkf50AAAAJ&hl=de
