--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -88,7 +88,7 @@
 
 "Golubev":
  - firstname: ["Dmitry", "D."]
-    url: https://orcid.org/0000-0002-0609-8921
+   url: https://orcid.org/0000-0002-0609-8921/
 
 "Musacchio":
  - firstname: ["Stefano", "S."]
