--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -72,7 +72,7 @@
    
 "Donvil":
  - firstname: ["Brecht", "B.", "Brecht I. C."]
-   url: https://scholar.google.com/citations?user=quFFd5oAAAAJ&hl=en&oi=sra
+   url: https://orcid.org/0000-0002-3952-6283
 
 "Mejía-Monasterio":
  - firstname: ["Carlos", "C."]
